Completata la stesura finale

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -150,9 +150,9 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-          0.9 & 06/12/2008 Corretti errori di sintassi, impaginazione e inserito il primo incremento & Cunico Marco \\
+          0.9 & 06/12/2008 Inserito secondo incremento e fine stesura del documento & Dal Bosco Davide\\
           \hline
-          0.8 & 06/12/2008 Modificata la sottosezione Assunzioni Iniziali, corretto errori ortografici, modificata impaginazione dei grafici & Dal Bosco Davide \\
+          0.8 & 06/12/2008 Corretti errori di sintassi, impaginazione e inserito il primo incremento & Cunico Marco \\
 		 \hline
           0.7 & 05/12/2008 Inserimento Distribuzione Ruoli e Gestione del Piano di Progetto & Cunico Marco \\
           \hline
@@ -225,12 +225,11 @@ I ruoli saranno assegnati a rotazione nell'arco dello sviluppo del progetto, in 
 Vedere Tabella: (\ref{tab:tabella_componenti}) della pagina ~\pageref{tab:tabella_componenti}\\
 
 \subsezione{Assunzioni Iniziali}
-Regole da rispettare per la realizzazione del progetto didattico:
-\begin{elenconumerato}{\normindent}
-				\item L'importo totale stimato \`e di 13059 euro.\\
-				\item Sono state previste 630 ore di lavoro.\\
-				\item L'impegno individuale di ogni componente varia da un minimo di 85 ore ad un massimo di 105 ore.\\
-			\end{elenconumerato}
+\begin{itemize}
+\item Il costo totale stimato \`e di 13059 euro. Eventuali costi aggiuntivi non saranno a carico del committente ma saranno coperti dall'azienda.
+\item Sono previste 630 ore di lavoro totali per la realizzazione del progetto.\\ 
+\item L'impegno individuale di ogni componente varia da un minimo di 85 ore ad un massimo di 105 ore.\\
+\end{itemize}
 
 \begin{table}[h]
 	\begin{center}
@@ -259,7 +258,7 @@ Regole da rispettare per la realizzazione del progetto didattico:
 
 
 \subsezione{Attribuzione dei Ruoli}
-Date le Assunzioni Iniziali precedentemente descritte, ed essendo il gruppo WebShape costituito da sei membri, si avr\`a una media di circa 105 ore di lavoro per persona. La durata complessiva del progetto sar\`a di circa 630 ore, ogni componente lavorer\`a quindi una media di circa 2 ore giornaliere. Sono previste altre 3 revisioni:
+Date le Assunzioni Iniziali precedentemente descritte, ed essendo il gruppo WebShape costituito da sei membri, si avr\`a una media di circa 105 ore di lavoro per persona. La durata complessiva del progetto sar\`a di circa 630 ore, ogni componente lavorer\`a quindi una media di circa 2 ore giornaliere. Sono previste altre tre revisioni:
 \begin{elenconumerato}{\normindent}
 				\item Revisione di Progetto Preliminare (RPP)
 				\item Revisione di Qualifica (RQ)
@@ -267,7 +266,7 @@ Date le Assunzioni Iniziali precedentemente descritte, ed essendo il gruppo WebS
 			\end{elenconumerato}
 
 La rotazione dei ruoli avviene come da tabella (\ref{tab:TabellaRotazRuoli}) della pagina ~\pageref{tab:TabellaRotazRuoli}.\\
-Dato che ogni componente del gruppo dovr\`a assumere tutti i ruoli, \`e previsto che nelle varie fasi del progetto i membri della societ\`a si assumano pi\'u incarichi. Non \`e permesso che uno stesso membro ricopra ruoli in conflitto di interessi tra loro.\\
+Dato che ogni componente del gruppo dovr\`a assumere tutti i ruoli, \`e previsto che nelle varie fasi del progetto i membri della societ\`a si assumano pi\`u incarichi. Non \`e permesso che uno stesso membro ricopra ruoli in conflitto di interessi tra loro.\\
 
 \sezione{Pianificazione}
 Per la realizzazione del progetto l'azienda WebShape ha valutato con attenzione i possibili modelli di cicli di vita da utilizzare, tenendo conto di eventuali pregi e difetti. 
@@ -306,8 +305,8 @@ In questa sottosezione verr\` a il preventivo totale, comprendente i costi e le 
 \includegraphics[width=350pt]{CostiTotali}
 
 \subsezione{Pianificazione economico-temporale RR-RPP}
-All' interno di questa fase avverr\'a la prima iterazione prevista dal modello di ciclo di vita.
-Al termine dell' iterazione verr\'a rilasciato un prototipo che soddisfer\'a i seguenti requisiti:\\
+All'interno di questa fase avverr\`a la prima iterazione prevista dal modello di ciclo di vita.
+Al termine dell'iterazione verr\`a rilasciato un prototipo che soddisfer\`a i seguenti requisiti:\\
 
 %%\begin{enumerate}
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
@@ -364,6 +363,35 @@ Preventivo relativo alla fase Revisione dei requisiti-Revisione del progetto pre
 
 
 \subsezione{Pianificazione economico-temporale RPP-RQ}
+All'interno di questa fase avverr\`a la seconda iterazione prevista dal modello di ciclo di vita.
+Al termine dell'iterazione verr\`a rilasciato un prototipo che soddisfer\`a i seguenti requisiti:\\
+
+%%\begin{enumerate}
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
+\item RPO-1
+\item RQO-1
+\item RQO-2
+\item RQO-3
+\item RQO-4
+\item RQO-5
+\item RQO-6
+\item RQO-7
+\item RQO-8
+\item RQO-9
+\item RQO-10
+\item RIO-1
+\item RIO-2
+\item RIO-3
+\item RIO-4
+\item RAO-1
+\item RAO-2
+\item RAO-3
+\item RAO-4
+\item RAO-5
+\item RAO-6
+\item RAD-1
+\end{elenconumerato}
+
 Preventivo relativo alla fase Revisione del progetto preliminare-Revisione di qualifica.
 \begin{table}[h]
 	\begin{center}
@@ -428,9 +456,9 @@ Preventivo relativo alla fase Revisione di qualifica-Revisione di accettazione.
 \includegraphics[width=350pt]{RQ-RA_Costi}
 
 \subsezione{Distribuzione dei ruoli}
-La distribuzione dei ruoli all'interno dell'azienda e' stata realizzata in modo da permettere a tutti i membri di Webshape di ricoprire tutti i ruoli richiesti dal progetto, distribuendoli nel modo pi\`u equo possibile, rispettando i vincoli previsti dalle Assunzioni Iniziali. La distribuzione dei ruoli \`e meglio descritta nella tabella (\ref{tab:TabellaRotazRuoli}) della pagina ~\pageref{tab:TabellaRotazRuoli} , \`e anche descritto il carico di lavoro/persona in ore nella tabella (\ref{tab:TabellaPrevPersOre}) della pagina ~\pageref{tab:TabellaPrevPersOre}.
+La distribuzione dei ruoli all'interno dell'azienda \`e stata realizzata in modo da permettere a tutti i membri di Webshape di ricoprire tutti i ruoli richiesti dal progetto, distribuendoli nel modo pi\`u equo possibile, rispettando i vincoli previsti dalle Assunzioni Iniziali. La distribuzione dei ruoli \`e meglio descritta nella tabella (\ref{tab:TabellaRotazRuoli}) della pagina ~\pageref{tab:TabellaRotazRuoli} ; \`e anche descritto il carico di lavoro/persona in ore nella tabella (\ref{tab:TabellaPrevPersOre}) della pagina ~\pageref{tab:TabellaPrevPersOre}.
 
-Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impiego orario rispetto ad ogni ruolo nella fase antecedente la RR. La remunerazione di tali ore non \`e a carico del committente, ma WebShape desidera mostrare quanto impegno sia stato investito nel progetto. La maggior parte degli sforzi \`e stata indirizzata nel dotare Webshape di metodi di lavoro adatti allo svolgimento del progetto e per meglio padroneggiare tali tecnologie.\\
+Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impiego orario rispetto ad ogni ruolo nella fase antecedente la RR. La retribuzione di tali ore non \`e a carico del committente, ma WebShape desidera mostrare quanto impegno sia stato investito nel progetto. La maggior parte degli sforzi \`e stata indirizzata nel dotare Webshape di metodi di lavoro adatti allo svolgimento del progetto, e per padroneggiare meglio con tali tecnologie.\\
 
 \begin{table}[h]
 	\begin{center}
@@ -526,7 +554,7 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 \end{table}
 
 \subsubsezione{Distribuzione dei carichi di lavoro}
-In questa sezione \'e presente l'intera distribuzione del carico di lavoro per membro del gruppo.\\
+%Distribuzione del carico di lavoro per membro del gruppo.\\
 
 \begin{table}[!h]
 	\begin{center}
@@ -581,7 +609,7 @@ Essendo l'azienda composta da sei membri, nell'eventualit\`a che uno di questi n
 \item \textbf{Compatibilit\`a e portabilit\`a del prodotto}\\
 Il prodotto finale, come da Requisiti, dovr\`a risultare funzionante sui pi\`u moderni browser in circolazione. Questo fatto \`e per\`o  a discrezione dell'utente finale, il quale deve essere consapevole della non retrocompatibilit\`a del prodotto, e quindi anche la portabilit\`a risulta essere  a sua discrezione.
 \item \textbf{Funzionalit\`a del prodotto}\\
-Essendo il prodotto finale utilizzato da un qualsiasi tipo di utente finale, \`e necessario prestare attenzione alla presentazione del prodotto, rendendo l'accessibilit\`a per tutte le sue funzioni semplice e immediata.
+Essendo il prodotto finale utilizzato da un qualsiasi tipo di utente finale, \`e necessario prestare attenzione a come il prodotto si presenta, rendendo l'accessibilit\`a a tutte le sue funzioni, semplice e immediata.
 \end{itemize}			
 
 \end{document}
