AR: corretto UC8

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -346,7 +346,7 @@ Il sistema permette all'utente di caricare file in formato SVG nel canvas.
 \item Il sistema visualizza il file SVG nel canvas. Se il file contiene elementi o attributi non supportati, essi saranno ignorati.
 \end{elenconumerato}
 \paragraph{Flusso alternativo}
-Se il file non pu\`o essere caricato a causa di un errore in lettura o perch\`e non \'e un file SVG, l'utente viene avvisato dell'errore e l'applicazione ritorna allo stato precedente l'esecuzione del comando.
+Se il file non pu\`o essere caricato a causa di un errore in lettura o perch\`e non \'e un file SVG, l'utente verr\`a avvisato dell'errore e l'applicazione ritorner\`a allo stato precedente l'esecuzione del comando.
 \paragraph{Precondizioni} Il canvas \'e visualizzato.
 \paragraph{Postcondizioni} Il canvas contiene la visualizzazione del file SVG selezionato dall'utente ed \'e modificabile.
 
