AR: aggiunto RFD cancellazione oggetto

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -702,6 +702,7 @@ per ognuna \`e presente una classificazione per classe di importanza (obbligator
 \item{AJAXDRAW permette di disegnare a mano libera.}
 \item{AJAXDRAW permette di disegnare connettori per diagrammi.}
 \item{AJAXDRAW permette di cancellare completamente l'area di disegno.}
+\item{AJAXDRAW permette di cancellare un singolo oggetto disegnato.}
 \end{elenconumerato}
 
 %facoltativi
