PQ: tolto errore comp.

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -167,7 +167,7 @@ La verifica del codice si compone dei seguenti aspetti:
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item Verifica automatica: verr\`a effettuata tramite test di unit\`a predisposti dai verificatori. I test dovranno coprire tutto il codice, a eccezzione delle parti il cui funzionamento dipende da input esterni non simulabili in un test di unit\`a, come ad esempio il codice che gestisce gli eventi generati dal movimento del mouse, oppure da effetti secondari i cui risultati non siano facilmente confrontabili in modo automatico, ad esempio come appare l'aspetto grafico del programma sullo schermo dell'utente. I test dovranno accertare il corretto funzionamento delle unit\`a di codice anche con input limite.
 \item Prova del prodotto: sar\`a effettuata eseguendo l'applicazione e interagendo con essa, assicurandosi che corrisponda a quanto progettato.
-\item Confronto con altri software gi\`a esistenti: requisito fondamentale del prodotto \'e la capacit\`a di generare immagini in formato \gloss{SVG}. Per assicurarsi che i file generati siano corretti, si caricheranno su software la cui correttezza \'e nota (ad esempio \textit{Inkscape}) e ci si assicurer\`a che le immagini visualizzate corrispondano con quanto disegnato dall'utente. 
+\item Confronto con altri software gi\`a esistenti: requisito fondamentale del prodotto \'e la capacit\`a di generare immagini in formato \underline{SVG}. Per assicurarsi che i file generati siano corretti, si caricheranno su software la cui correttezza \'e nota (ad esempio \textit{Inkscape}) e ci si assicurer\`a che le immagini visualizzate corrispondano con quanto disegnato dall'utente. 
 \item Lettura del codice per controllare che le norme di codifica siano rispettate
 \item Analisi del codice tramite walkthrough alla ricerca di eventuali errori. Vista la particolare dispendiosit\`a di questa modalit\`a di verifica, essa verr\`a applicata unicamente a sezioni critiche del codice.
 \end{elenconumerato}
